    - Send collected values to a web-server: write_http
    - ZFS Adaptive Replacement Cache statistics: zfs_arc (disabled in Debian,
      libkstat is not available)
    New matches:
    - Match zero COUNTER values: empty_counter
  * Set urgency to medium because of the fix for #535786.
  * debian/rules:
    - Install contrib/GenericJMX.conf to /usr/share/doc/collectd/examples/.
  * debian/patches:
    - Removed bts535787-powerdns-fix-localsocket.dpatch - included upstream.
    - Removed bts541953-curl-followlocation.dpatch - included upstream.
    - Removed bts542859-df-fix-ignorelist.dpatch - included upstream.
    - Removed java-fix-jvm-start.dpatch - included upstream.
    - Removed libvirt-reconnect.dpatch - included upstream.
    - Removed network-fix-cacheflush.dpatch - included upstream.
    - Removed plugin-fix-unregister.dpatch - included upstream.
    - Added gmond-fix-compile-error.dpatch - upstream patch fixing a compile
      error in the gmond plugin.
  * debian/control:
    - Build depend on libyajl-dev, which is required by the curl_json plugin.

 -- Sebastian Harl <tokkee@debian.org>  Thu, 15 Oct 2009 19:25:02 +0200

collectd (4.7.2-1) unstable; urgency=low

  * New upstream release (Closes: #541887).
    - collectd2html.pl now supports the creation of SVG images; thanks to Ivan
      Shmakov for providing a patch (Closes: #482185).
    New plugins:
    - Connection tracking table size: conntrack
    - Linux file-system based caching framework statistics: fscache
    - Receive and interpret Ganglia multicast traffic: gmond
    - Embedded Java Virtual Machine: java
    - Query and parse data from a memcache daemon: memcachec
    - Information about network protocols: protocols
    - Parse table-like structured files: table
    - Power consumption measurements from "The Energy Detective" (TED): ted
    - System uptime: uptime
  * debian/rules:
    - Install collectd-unixsock.py to /usr/share/doc/collectd/examples/.